Adding puzzler 69: 'Beep Beep...Reversing'

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             <li><a href="#" id="pzzlr-066">Inference Hindrance</a></li>
             <li><a href="#" id="pzzlr-067">Inconstant Constants</a></li>
             <li><a href="#" id="pzzlr-068">For Each Step...</a></li>
+            <li><a href="#" id="pzzlr-069">Beep Beep...Reversing</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
