--- a/contribute.html
+++ b/contribute.html
@@ -171,6 +171,7 @@
               <li><a href="/#pzzlr-066" id="pzzlr-066">Inference Hindrance</a></li>
               <li><a href="/#pzzlr-067" id="pzzlr-067">Inconstant Constants</a></li>
               <li><a href="/#pzzlr-068" id="pzzlr-068">For Each Step...</a></li>
+              <li><a href="/#pzzlr-069" id="pzzlr-069">Beep Beep...Reversing</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
