--- a/puzzlers/pzzlr-set-ordering.html
+++ b/puzzlers/pzzlr-set-ordering.html
@@ -20,10 +20,10 @@
 <pre class="prettyprint lang-scala">
 import collection.SortedSet
 
-val sorted = SortedSet(-1, 1, 2)(implicitly[Ordering[Int]].reverse)
+val ints = SortedSet(-1, 1, 2)(implicitly[Ordering[Int]].reverse)
 
-println(sorted.filter(_ > 0).head)
-println(sorted.collect({ case n if n > 0 => n }).head)
+println(ints.filter(_ > 0).head)
+println(ints.collect({ case n if n > 0 => n }).head)
 </pre>
   <ol>
     <li>Prints:
@@ -56,6 +56,12 @@ println(sorted.collect({ case n if n > 0 => n }).head)
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    TODO
+    Both <a href="http://www.scala-lang.org/api/current/scala/collection/Set.html#filter(p:A=>Boolean):Repr" target="_blank"><tt>Set.filter</tt></a>
+    and <a href="http://www.scala-lang.org/api/current/scala/collection/Set.html#collect[B](pf:PartialFunction[A,B]):scala.collection.Set[B]" target="_blank"><tt>Set.collect</tt></a>
+    preserve the source collection's type and return new sorted sets.
+    However, in common with other methods that can return a different
+    element type, such as <tt>map</tt> and <tt>flatMap</tt>, the
+    <tt>collect</tt> method does not preserve the source collection's
+    <em>ordering</em>.
   </p>
 </div>
