--- a/contact.html
+++ b/contact.html
@@ -172,6 +172,7 @@
               <li><a href="/#pzzlr-067" id="pzzlr-067">Inconstant Constants</a></li>
               <li><a href="/#pzzlr-068" id="pzzlr-068">For Each Step...</a></li>
               <li><a href="/#pzzlr-069" id="pzzlr-069">Beep Beep...Reversing</a></li>
+              <li><a href="/#pzzlr-070" id="pzzlr-070">Reductio Ad Absurdum</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
