--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <li><a href="#" id="pzzlr-067">Inconstant Constants</a></li>
             <li><a href="#" id="pzzlr-068">For Each Step...</a></li>
             <li><a href="#" id="pzzlr-069">Beep Beep...Reversing</a></li>
+            <li><a href="#" id="pzzlr-070">Reductio Ad Absurdum</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
