--- a/puzzlers/pzzlr-varargs-eta.html
+++ b/puzzlers/pzzlr-varargs-eta.html
@@ -84,19 +84,22 @@ I like your dots!
     application (as in <tt>useSAgain</tt>).
   </p>
   <p>
-    In the case of <tt>useS</tt>, this argument is
-    &quot;re-expanded&quot; by the compiler when passed to
-    <tt>StringContext.s</tt>, so the invocation behaves as expected.
+    In the case of <tt>useS</tt>, this argument is treated as a
+    sequence argument (SLS &sect;6.6) and is thus &quot;re-expanded&quot;
+    by the compiler when passed to <tt>StringContext.s</tt>. In other
+    words, the eta-expanded function is equivalent to <tt>(args:
+    Seq[Any]) => sc.s(args: _*)</tt>, and the invocation behaves
+    as expected.
   </p>
     For <tt>useSAgain</tt>, however, the argument is passed to
     <tt>StringContext.s</tt> as a <em>single</em> value of type
-    <tt>Seq[Any]</tt>. This results in a runtime exception since the
+    <tt>Seq[Any]</tt>. This results in a runtime exception, since the
     processed string literal contains two expressions and so expects two
     values to be passed.
   </p>
   <p>
     While the &quot;passing through&quot; of a repeated parameter
-    during eta expansion is in line with most users' expectation, it is
+    during eta expansion is in line with most users' expectations, it is
     unclear whether this agrees with the specification of eta expansion
     in SLS &sect;6.26.5.
   </p>
