--- a/puzzlers/pzzlr-025.html
+++ b/puzzlers/pzzlr-025.html
@@ -13,6 +13,10 @@
       <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
+    <tr>
+      <td><strong>Made obsolete by</strong></td>
+      <td><a href="https://github.com/scala/bug/issues/9827" target="_blank" >SI-9827</a></td>
+    </tr>
   </tbody>
 </table>
 <div class="code-snippet">
