Clarify sample answer for 'Implicit Kryptonite'

--- a/puzzlers/pzzlr-033.html
+++ b/puzzlers/pzzlr-033.html
@@ -42,7 +42,7 @@ implicitly[Printer] print implicitly[Messages].greeting
 }
 </pre>
   <ol>
-    <li id="correct-answer">The first prints:
+    <li id="correct-answer">The first <tt>implicitly[Printer] print ...</tt> statement prints:
 <pre class="prettyprint lang-scala">
 Hello, world!
 </pre>
