Fix deprecation warnings

--- a/puzzlers/pzzlr-035.html
+++ b/puzzlers/pzzlr-035.html
@@ -21,7 +21,7 @@
 def objFromJava: Object = "string"
 def stringFromJava: String = null
 
-def printLengthIfString(a: AnyRef) {
+def printLengthIfString(a: AnyRef): Unit = {
   a match {
     case s: String => println("String of length " + s.length)
     case _ => println("Not a string")
