--- a/puzzlers/pzzlr-039.html
+++ b/puzzlers/pzzlr-039.html
@@ -18,7 +18,7 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-def acceptsAnyArgs(any1: Any)(any2: Any*) {
+def acceptsAnyArgs(any1: Any)(any2: Any*): Unit = {
   println(any1)
   println(any2)
 }
