Adapt 'Heads You Win...' to Scala 2.13 changes

--- a/puzzlers/pzzlr-061.html
+++ b/puzzlers/pzzlr-061.html
@@ -19,7 +19,7 @@
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
 import java.util.{List => JList, LinkedList}
-import scala.collection.JavaConversions._
+import scala.collection.convert.ImplicitConversions._
 
 def listFromJava: JList[Int] = {
   val jlist = new LinkedList[Int]()
@@ -28,40 +28,35 @@ def listFromJava: JList[Int] = {
   jlist
 }
 
-def printHeadOrEmpty(s: Seq[_]) = s match {
+def printHeadOrEmpty(s: collection.Seq[_]) = s match {
    case hd :: _ => println(hd)
    case _ => println("Empty :-(")
 }
 
 printHeadOrEmpty(listFromJava)
 printHeadOrEmpty(listFromJava.toSeq)
-printHeadOrEmpty(Seq(listFromJava: _*))
 </pre>
   <ol>
     <li>Prints
 <pre class="prettyprint lang-scala">
 1
 1
-1
 </pre>
     </li>
     <li>Prints
 <pre class="prettyprint lang-scala">
+1
 Empty :-(
-1
-1
 </pre>
     </li>
     <li>Prints
 <pre class="prettyprint lang-scala">
-Empty :-(
 Empty :-(
 Empty :-(
 </pre>
     </li>
     <li id="correct-answer">Prints
 <pre class="prettyprint lang-scala">
-Empty :-(
 Empty :-(
 1
 </pre>
@@ -72,17 +67,15 @@ Empty :-(
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    Scala's <a href="http://www.scala-lang.org/api/current/index.html#scala.collection.JavaConversions%24" target="_blank">
-    <tt>JavaConversions</tt></a> turn Java lists into instances of
+    Scala's <a href="https://www.scala-lang.org/api/current/scala/collection/convert/ImplicitConversions$.html" target="_blank">
+    <tt>ImplicitConversions</tt></a> turn Java lists into instances of
     <tt>collection.mutable.Buffer</tt>, since Java lists are mutable. The
     pattern match <tt>hd :: _</tt>, on the other hand, is a constructor
     pattern using the case class <a href="http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.$colon$colon" target="_blank"><tt>::</tt></a>,
     which is an <em>immutable</em> list.
   </p>
   <p>
-    Therefore, the first two matches fail. The third match, however, succeeds.
-    This is due to the fact that the expression <tt>Seq(listFromJava: _*)</tt>,
-    which invokes <tt>collection.Seq</tt>, returns an immutable sequence.
+    Therefore, the first match fails. The second match, however, succeeds, since <tt>toSeq</tt> returns an immutable sequence.
   </p>
   <p>
     To match both immutable
