Move puzzlers made obsolete by 2.13 changes to the Archive section

--- a/archive.html
+++ b/archive.html
@@ -118,8 +118,15 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Puzzlers</li>
+              <li class="nav-header">2.13</li>
+              <li><a href="#" id="pzzlr-030">Double Trouble</a></li>
+              <li><a href="#" id="pzzlr-052">Partial Oddity</a></li>
+              <li><a href="#" id="pzzlr-062">Identity Crisis</a></li>
+              <li><a href="#" id="pzzlr-064">Traversing Travesty</a></li>
+              <li><a href="#" id="pzzlr-071">Repeat After Me</a></li>
               <li class="nav-header">2.12</li>
               <li><a href="#" id="pzzlr-025">$!.*% Iterators!</a></li>
+              <li><a href="#" id="pzzlr-050">Extract or Fail?</a></li>
               <li class="nav-header">2.11</li>
               <li><a href="#" id="pzzlr-038">What Were You Expecting?</a></li>
               <li class="nav-header">2.9</li>
