--- a/puzzlers/pzzlr-052.html
+++ b/puzzlers/pzzlr-052.html
@@ -13,6 +13,10 @@
       <td><strong>First tested with Scala version</strong></td>
       <td>2.11.1</td>
     </tr>
+    <tr>
+      <td><strong>Made obsolete by</strong></td>
+      <td><a href="https://github.com/scala/scala/commit/0cddad7946b3f96aaa35e780ffb10e64350509ae" target="_blank" >Deprecation</a> and subsequent removal of <tt>PartialFunction.apply</tt></td>
+    </tr>
   </tbody>
 </table>
 <div class="code-snippet">
