--- a/puzzlers/pzzlr-064.html
+++ b/puzzlers/pzzlr-064.html
@@ -13,6 +13,10 @@
       <td><strong>First tested with Scala version</strong></td>
       <td>2.11.6</td>
     </tr>
+    <tr>
+      <td><strong>Made obsolete by</strong></td>
+      <td><a href="https://github.com/scala/scala/commit/878e7d3e0d14633d19bac47dc9b532a54eab6379" target="_blank" >2.13 Collections redesign</a></td>
+    </tr>
   </tbody>
 </table>
 <div class="code-snippet">
