--- a/puzzlers/pzzlr-069.html
+++ b/puzzlers/pzzlr-069.html
@@ -64,4 +64,21 @@ println(ints.collect({ case n if n > 0 => n }).head)
     <tt>collect</tt> method does not preserve the source collection's
     <em>ordering</em>.
   </p>
+  <p>
+    In 2.13, there are overloaded methods that take an <tt>Ordering</tt>, for example, 
+    <a href="https://scala-lang.org/files/archive/api/2.13.0/scala/collection/SortedSet.html#collect[B](pf:PartialFunction[A,B])(implicitev:Ordering[B]):CC[B]" target="_blank"><tt>Set.collect</tt></a>:
+<pre class="prettyprint lang-scala">
+import collection.SortedSet
+
+val ints = SortedSet(-1, 1, 2)(implicitly[Ordering[Int]].reverse)
+
+println(ints.collect { case n if n > 0 => n }(implicitly[Ordering[Int]].reverse).head)
+</pre>
+or
+<pre class="prettyprint lang-scala">
+implicit val reversal: Ordering[Int] = math.Ordering.Int.reverse
+val ints = SortedSet(-1, 1, 2)
+ints.collect { case n if n > 0 => n }.head
+</pre>
+  </p>
 </div>
