http -> https where possible

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
  <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon" />
  <link href="css/bootstrap.min.css" rel="stylesheet">
  <link href="css/prettify.css" type="text/css" rel="stylesheet" />
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
  <script type="text/javascript" src="js/prettify.js"></script>
  <script type="text/javascript">
 
@@ -182,9 +182,9 @@
 	  <div class="headline-unit">
 	    <h2>About</h2>
             <p>
-	      This website, which is maintained by <a href="mailto:andrew@scalapuzzlers.com">Andrew Phillips</a> and <a href="http://twitter.com/higherkinded" target="_blank">Nermin Serifovic</a>, has been created with the purpose of collecting scattered examples of Scala puzzlers in a central location on the web to portray some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
+	      This website, which is maintained by <a href="mailto:andrew@scalapuzzlers.com">Andrew Phillips</a> and <a href="https://twitter.com/higherkinded" target="_blank">Nermin Serifovic</a>, has been created with the purpose of collecting scattered examples of Scala puzzlers in a central location on the web to portray some of Scala's quirks. Furthermore, the goal was to educate as well as ultimately help point out areas of the language that could be made less confusing.
 	      <br/><br/>
-              We would like to extend special thanks to <a href="http://twitter.com/grylix" target="_blank">Dominik Gruntz</a> and <a href="http://twitter.com/SomSnytt" target="_blank">A.P. Marki</a>, who have not only contributed many puzzlers, but also helped make Scala Puzzlers better by providing constant feedback and suggestions.
+              We would like to extend special thanks to <a href="https://twitter.com/grylix" target="_blank">Dominik Gruntz</a> and <a href="https://twitter.com/SomSnytt" target="_blank">A.P. Marki</a>, who have not only contributed many puzzlers, but also helped make Scala Puzzlers better by providing constant feedback and suggestions.
             </p>
           </div> 
           <footer class="footer">
