--- a/puzzlers/pzzlr-009.html
+++ b/puzzlers/pzzlr-009.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/a/4416436/465304">Stack Overflow</a></td>
+      <td><a target="_blank" href="https://stackoverflow.com/a/4416436/465304">Stack Overflow</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
