--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -85,7 +85,7 @@ class Z {
 s2 = (new StringBuilder()).append(s2).append(s2).toString()
 </pre>
       where the argument <tt>s2</tt> has its default value <tt>null</tt>. According to the
-      <a href="http://docs.oracle.com/javase/specs/jls/se5.0/html/expressions.html#15.18.1.1">JLS, Section 15.18.1.1</a>
+      <a href="https://docs.oracle.com/javase/specs/jls/se5.0/html/expressions.html#15.18.1.1">JLS, Section 15.18.1.1</a>
       the reference <tt>null</tt> is converted to the string <tt>"null"</tt>, and the value which gets assigned to <tt>s2</tt>
       is the string <tt>"nullnull"</tt> which has length 8.
     </ul>
