--- a/puzzlers/pzzlr-038.html
+++ b/puzzlers/pzzlr-038.html
@@ -98,7 +98,7 @@ scala> new Expect("1 + 1 = %s", future(1 + 1: Integer)).announce()
   <p>
     There are further ideas for coping with primitives in a <tt>ClassTag</tt>-assisted
   pattern match at
-  <a target="_blank" href="http://stackoverflow.com/questions/16825927/classtag-based-pattern-matching-fails-for-primitives">the Stack Overflow question</a>
+  <a target="_blank" href="https://stackoverflow.com/questions/16825927/classtag-based-pattern-matching-fails-for-primitives">the Stack Overflow question</a>
   and on the mailing list.
   </p>
 </div>
