--- a/puzzlers/pzzlr-052.html
+++ b/puzzlers/pzzlr-052.html
@@ -107,7 +107,7 @@ val isOdd: PartialFunction[Int, String] = {
   </p>
   <p>
     See <a href="http://www.codepills.net/" target="_blank">Gabriele
-    Petronella</a>'s <a href="http://stackoverflow.com/questions/25372561/how-does-orelse-work-on-partialfunctions/25373446#25373446" target="blank">
+    Petronella</a>'s <a href="https://stackoverflow.com/questions/25372561/how-does-orelse-work-on-partialfunctions/25373446#25373446" target="blank">
     excellent explanation</a> in the original Stack Overflow post for more
     details.
   </p>
