--- a/puzzlers/pzzlr-056.html
+++ b/puzzlers/pzzlr-056.html
@@ -65,7 +65,7 @@ Oops: Boxed Exception
     new Error("fatal!")))</tt>.
   </p>
   <p>
-    See the <a href="http://docs.scala-lang.org/overviews/core/futures.html#exceptions" target="_blank">Futures and Promises documentation</a>
+    See the <a href="https://docs.scala-lang.org/overviews/core/futures.html#exceptions" target="_blank">Futures and Promises documentation</a>
     for details.
   </p>
 </div>
