--- a/puzzlers/pzzlr-060.html
+++ b/puzzlers/pzzlr-060.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/q/29815264/1296806">A. P. Marki</a></td>
+      <td><a target="_blank" href="https://stackoverflow.com/q/29815264/1296806">A. P. Marki</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
