--- a/puzzlers/pzzlr-061.html
+++ b/puzzlers/pzzlr-061.html
@@ -67,7 +67,7 @@ Empty :-(
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    Scala's <a href="https://www.scala-lang.org/api/current/scala/collection/convert/ImplicitConversions$.html" target="_blank">
+    Scala's <a href="http://www.scala-lang.org/api/current/scala/collection/convert/ImplicitConversions$.html" target="_blank">
     <tt>ImplicitConversions</tt></a> turn Java lists into instances of
     <tt>collection.mutable.Buffer</tt>, since Java lists are mutable. The
     pattern match <tt>hd :: _</tt>, on the other hand, is a constructor
