--- a/puzzlers/pzzlr-065.html
+++ b/puzzlers/pzzlr-065.html
@@ -70,7 +70,7 @@ and the second throws a runtime exception
     following the identifier.
   </p>
   <p>
-    Instead, as described in <a href="http://docs.scala-lang.org/overviews/core/string-interpolation.html" target="_blank">
+    Instead, as described in <a href="https://docs.scala-lang.org/overviews/core/string-interpolation.html" target="_blank">
     the documentation</a>, the string-like expression following the identifier
     is <em>always</em> treated as a multi-line string literal, i.e. as if it
     were enclosed in triple-quotes. The expressions
