--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
  <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon" />
  <link href="css/bootstrap.min.css" rel="stylesheet">
  <link href="css/prettify.css" type="text/css" rel="stylesheet" />
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
  <script type="text/javascript" src="js/prettify.js"></script>
  <script type="text/javascript">
 
@@ -182,7 +182,7 @@
 	  <div class="headline-unit">
 	    <h2>Contact</h2>
             <p>
-	      If you would like to stay up-to-date with newly added puzzlers, follow us on <a href="http://twitter.com/#!/ScalaPuzzlers">
+	      If you would like to stay up-to-date with newly added puzzlers, follow us on <a href="https://twitter.com/#!/ScalaPuzzlers">
 		<img src="img/twitter.png" alt="twitter" style="padding-bottom:10px;padding-left:2px;"/></a>
 		<br/><br/>
 	      For feedback and general inquiries you can reach us by <a href="mailto:contact@scalapuzzlers.com">email</a>
