--- a/contribute.html
+++ b/contribute.html
@@ -6,7 +6,7 @@
  <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon" />
  <link href="css/bootstrap.min.css" rel="stylesheet">
  <link href="css/prettify.css" type="text/css" rel="stylesheet" />
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
  <script type="text/javascript" src="js/prettify.js"></script>
  <script type="text/javascript">
 
