--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <link rel="shortcut icon" href="img/favicon.gif" type="image/x-icon" />
  <link href="css/bootstrap.min.css" rel="stylesheet">
  <link href="css/prettify.css" type="text/css" rel="stylesheet" />
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
  <script type="text/javascript" src="js/prettify.js"></script>
  
 </head>
@@ -87,13 +87,13 @@
     /* * * DISQUS CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'scalapuzzlers'; // required: replace example with your forum shortname
     var disqus_identifier = 'elem.id';
-    var disqus_url = 'http://scalapuzzlers.com/!#/' + 'elem.id';
+    var disqus_url = 'https://scalapuzzlers.com/!#/' + 'elem.id';
     var disqus_title = $('#title').find("h1").text();
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-      dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+      dsq.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
      })(); 
   </script>
@@ -189,7 +189,7 @@
                     reload: true,
                     config: function () {
                       this.page.identifier = elem.id;
-                      this.page.url = 'http://scalapuzzlers.com/#!/' + elem.id;
+                      this.page.url = 'https://scalapuzzlers.com/#!/' + elem.id;
                       this.page.title = $('#title').find("h1").text();
                     }
                   });
@@ -289,13 +289,13 @@
             $('#correct-answer').addClass("correct-answer");
             $('#explanation').show('slow', function() {
               disqus_identifier = elem.id;
-              disqus_url = 'http://scalapuzzlers.com/#!/' + elem.id;
+              disqus_url = 'https://scalapuzzlers.com/#!/' + elem.id;
               disqus_title = $('#title').find("h1").text();
               DISQUS.reset({
                 reload: true,
                 config: function () {  
                   this.page.identifier = elem.id;  
-                  this.page.url = 'http://scalapuzzlers.com/#!/' + elem.id;
+                  this.page.url = 'https://scalapuzzlers.com/#!/' + elem.id;
                   this.page.title = $('#title').find("h1").text();
                 }
               });
