--- a/puzzlers/pzzlr-007.html
+++ b/puzzlers/pzzlr-007.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/questions/4591781/passing-functions-for-all-applicable-types-around">Stack Overflow</a></td>
+      <td><a target="_blank" href="https://stackoverflow.com/questions/4591781/passing-functions-for-all-applicable-types-around">Stack Overflow</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
