--- a/puzzlers/pzzlr-020.html
+++ b/puzzlers/pzzlr-020.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/questions/5676301/scala-currying-and-default-arguments">Stack Overflow</a></td>
+      <td><a target="_blank" href="https://stackoverflow.com/questions/5676301/scala-currying-and-default-arguments">Stack Overflow</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
