--- a/puzzlers/pzzlr-048.html
+++ b/puzzlers/pzzlr-048.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://nurkiewicz.github.io/talks/2014/scalar/#/12">Tomasz Nurkiewicz</a></td>
+      <td><a target="_blank" href="https://nurkiewicz.github.io/talks/2014/scalar/#/12">Tomasz Nurkiewicz</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
