--- a/puzzlers/pzzlr-062.html
+++ b/puzzlers/pzzlr-062.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/a/29217414/1296806">Stack Overflow</a></td>
+      <td><a target="_blank" href="https://stackoverflow.com/a/29217414/1296806">Stack Overflow</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
