--- a/puzzlers/pzzlr-070.html
+++ b/puzzlers/pzzlr-070.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a href="http://stackoverflow.com/a/18109794">Stack Overflow</a></td>
+      <td><a href="https://stackoverflow.com/a/18109794">Stack Overflow</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
