Explain how to get 'Init You, Init Me' working in 2.13.2 or newer
See https://github.com/scala/scala/pull/8748

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -20,6 +20,8 @@
 <div class="code-snippet">
 <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
+// start a 2.13.2 or newer REPL using "scala -Yrepl-class-based:false"
+// see https://github.com/scala/scala/pull/8748
 object XY {
   object X {
     val value: Int = Y.value + 1
